Bet-service: add discipline